@@ -3,6 +3,8 @@ propellor (5.5.0) UNRELEASED; urgency=medium
   * letsencrypt': Pass --expand to support expanding the list of domains
   * Split mailname property out of Hostname.sane, since bad mailname
     guesses can lead to ugly surprises. (API change)
+  * Added Systemd.escapePath helper function useful when creating mount
+    units.
 
  -- Joey Hess <id@joeyh.name>  Thu, 09 Aug 2018 10:54:41 -0400
 
